changed the requestOrigin from a string to an Object
